Added twitter and github gems

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
+    <%= render 'home/navbar' %>
+    <div class="container">
+    <%= render 'home/flash' %>
     <%= yield %>
+    </div>
   </body>
 </html>
